# CS6913-Web-Search-Engines

./: README.md
encoders/: download_dataset.py  e5_bi_encoder_beir.py  e5_bi_encoder_hnsw.py  e5_cross_encoder.ipynb  nfcorpus_e5.ipynb  nfcorpus_tasb.ipynb  plot.ipynb  readme.txt  scifact_e5.ipynb  scifact_tasb.ipynb  touche2020_e5.ipynb  touche2020_tasb.ipynb  treccovid_e5.ipynb  treccovid_tasb.ipynb
query_processor/: CMakeLists.txt  readme.txt
query_processor/src/: IndexBuilder.cpp  IndexBuilder.h  InvertedList.cpp  InvertedList.h  Lexicon.cpp  Lexicon.h  PageTable.cpp  PageTable.h  QueryProcessor.cpp  QueryProcessor.h  SearchResult.cpp  SearchResult.h  config.h  main.cpp
query_processor/src/web-interface/: app.py
query_processor/src/web-interface/static/css/: result.css  search.css
query_processor/src/web-interface/templates/: result.html
ranking_optimizer/: CMakeLists.txt  readme.txt
ranking_optimizer/src/: IndexBuilder.cpp  IndexBuilder.h  InvertedList.h  PageTable.cpp  PageTable.h  QueryProcessor.cpp  QueryProcessor.h  SearchResult.cpp  config.h  main.cpp
ranking_optimizer/src/ranking-optimizer/: build_hnsw_index.py  query_bm25.py  query_hnsw.py  query_rerank.py  trec_eval.py
ranking_optimizer/src/web-interface/: app.py
ranking_optimizer/src/web-interface/templates/: result.html  search.html
web_crawler/: explain.txt  readme.txt  requirements.txt  web_crawler.py
web_crawler/data/: crawler_log_1.txt  crawler_log_2.txt  nz_domain_seeds_list.txt  seeds_1.txt  seeds_2.txt  submit.txt
